# FlexNN

./: CMakeLists.txt  Doxyfile  FlexNN_8cpp.html  FlexNN_8cpp__incl.dot  FlexNN_8h.html  FlexNN_8h.js  FlexNN_8h__dep__incl.dot  FlexNN_8h__incl.dot  FlexNN_8h_source.html  Layer_8cpp.html  Layer_8cpp__incl.dot  Layer_8h.html  Layer_8h__dep__incl.dot  Layer_8h__incl.dot  Layer_8h_source.html  README.md  README_8md.html  Utility_8cpp.html  Utility_8cpp__incl.dot  Utility_8h.html  Utility_8h__dep__incl.dot  Utility_8h__incl.dot  Utility_8h_source.html  annotated.html  classFlexNN_1_1Layer-members.html  classFlexNN_1_1Layer.html  classFlexNN_1_1NeuralNetwork-members.html  classFlexNN_1_1NeuralNetwork.html  classFlexNN_1_1NeuralNetwork.js  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  (+15 more)
docs/: FlexNN_8cpp.html  FlexNN_8cpp__incl.map  FlexNN_8cpp__incl.md5  FlexNN_8h.html  FlexNN_8h__dep__incl.map  FlexNN_8h__dep__incl.md5  FlexNN_8h__incl.map  FlexNN_8h__incl.md5  FlexNN_8h_source.html  Layer_8cpp.html  Layer_8cpp__incl.map  Layer_8cpp__incl.md5  Layer_8h.html  Layer_8h.js  Layer_8h__dep__incl.map  Layer_8h__dep__incl.md5  Layer_8h__incl.map  Layer_8h__incl.md5  Layer_8h_source.html  README_8md.html  Utility_8cpp.html  Utility_8cpp__incl.map  Utility_8cpp__incl.md5  Utility_8h.html  (+35 more)
(+43 files in other folders)
